LSTM code rectified

--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,16 +81,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_20992\\2025491202.py:1: DtypeWarning: Columns (46) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_14164\\2025491202.py:1: DtypeWarning: Columns (46) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  train = pd.read_csv(r'D:\\Project Phase II\\Dataset\\finaltrain.csv',encoding='cp1252')\n",
-      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_20992\\2025491202.py:2: DtypeWarning: Columns (46) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_14164\\2025491202.py:2: DtypeWarning: Columns (46) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  test = pd.read_csv(r'D:\\Project Phase II\\Dataset\\finaltest.csv',encoding='cp1252')\n"
      ]
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "8963"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,18 +243,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "MemoryError",
-     "evalue": "Unable to allocate 613. MiB for an array with shape (8963, 8963) and data type float64",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[127], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# Prepare an adjacency matrix of the nodes\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m adjacency_matrix \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((\u001b[38;5;28mlen\u001b[39m(nodes), \u001b[38;5;28mlen\u001b[39m(nodes)), dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mfloat\u001b[39m)\n\u001b[0;32m      4\u001b[0m label_matrix \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((\u001b[38;5;28mlen\u001b[39m(nodes), \u001b[38;5;28mlen\u001b[39m(nodes)))\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Add the columns srcip:sport and dstip:dsport to the adjacency matrix\u001b[39;00m\n",
-      "\u001b[1;31mMemoryError\u001b[0m: Unable to allocate 613. MiB for an array with shape (8963, 8963) and data type float64"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_14164\\3664507687.py:13: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  adjacency_matrix[src_index, dst_index] = lda_x_train[i]\n"
      ]
     }
    ],
@@ -279,30 +276,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Label\n",
-       "0    3500\n",
-       "1    3500\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Find label counts for first 7000 records in train\n",
-    "train['Label'].value_counts()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -318,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,18 +317,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "MemoryError",
-     "evalue": "Unable to allocate 628. MiB for an array with shape (9074, 9074) and data type float64",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[120], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# Prepare an adjacency matrix of the nodes\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m adjacency_matrix_test \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((\u001b[38;5;28mlen\u001b[39m(tenodes), \u001b[38;5;28mlen\u001b[39m(tenodes)), dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mfloat\u001b[39m)\n\u001b[0;32m      4\u001b[0m label_matrix_test \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((\u001b[38;5;28mlen\u001b[39m(tenodes), \u001b[38;5;28mlen\u001b[39m(tenodes)))\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Add the columns srcip:sport and dstip:dsport to the adjacency matrix\u001b[39;00m\n",
-      "\u001b[1;31mMemoryError\u001b[0m: Unable to allocate 628. MiB for an array with shape (9074, 9074) and data type float64"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_14164\\4001184087.py:13: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  adjacency_matrix_test[src_index, dst_index] = lda_x_test[i]\n"
      ]
     }
    ],
@@ -370,8 +340,8 @@
     "for i in range(len(test)):\n",
     "    src = str(test['srcip'].iloc[i])+':'+str(test['sport'].iloc[i])\n",
     "    dst = str(test['dstip'].iloc[i])+':'+str(test['dsport'].iloc[i])\n",
-    "    src_index = list(nodes).index(src)\n",
-    "    dst_index = list(nodes).index(dst)\n",
+    "    src_index = list(tenodes).index(src)\n",
+    "    dst_index = list(tenodes).index(dst)\n",
     "    adjacency_matrix_test[src_index, dst_index] = lda_x_test[i]\n",
     "    label_matrix_test[src_index, dst_index] = test['Label'].iloc[i]\n",
     "# Flatten tuple values in the adjacency matrix\n",
@@ -383,14 +353,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "LSTM Model"
+    "## LSTM Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\sathi\\AppData\\Roaming\\Python\\Python311\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\sathi\\AppData\\Roaming\\Python\\Python311\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\sathi\\AppData\\Roaming\\Python\\Python311\\site-packages\\keras\\src\\optimizers\\__init__.py:309: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n",
+      "Epoch 1/2\n",
+      "WARNING:tensorflow:From C:\\Users\\sathi\\AppData\\Roaming\\Python\\Python311\\site-packages\\keras\\src\\utils\\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\sathi\\AppData\\Roaming\\Python\\Python311\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n",
+      "  50438/2008385 [..............................] - ETA: 2:08:39 - loss: 0.0035 - accuracy: 1.0000"
+     ]
+    }
+   ],
    "source": [
     "# Create an instance of the model\n",
     "# Hyperparameters\n",
