--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -81,16 +81,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_14164\\2025491202.py:1: DtypeWarning: Columns (46) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_16964\\2025491202.py:1: DtypeWarning: Columns (46) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  train = pd.read_csv(r'D:\\Project Phase II\\Dataset\\finaltrain.csv',encoding='cp1252')\n",
-      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_14164\\2025491202.py:2: DtypeWarning: Columns (46) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_16964\\2025491202.py:2: DtypeWarning: Columns (46) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  test = pd.read_csv(r'D:\\Project Phase II\\Dataset\\finaltest.csv',encoding='cp1252')\n"
      ]
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,14 +243,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_14164\\3664507687.py:13: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_16964\\3664507687.py:13: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  adjacency_matrix[src_index, dst_index] = lda_x_train[i]\n"
      ]
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,14 +317,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_14164\\4001184087.py:13: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_16964\\4001184087.py:13: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  adjacency_matrix_test[src_index, dst_index] = lda_x_test[i]\n"
      ]
     }
@@ -376,7 +376,9 @@
       "\n",
       "WARNING:tensorflow:From C:\\Users\\sathi\\AppData\\Roaming\\Python\\Python311\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
       "\n",
-      "  50438/2008385 [..............................] - ETA: 2:08:39 - loss: 0.0035 - accuracy: 1.0000"
+      "2008385/2008385 [==============================] - 6828s 3ms/step - loss: 1.0093e-04 - accuracy: 1.0000 - val_loss: 1.5123e-05 - val_accuracy: 1.0000\n",
+      "Epoch 2/2\n",
+      "2008385/2008385 [==============================] - 6704s 3ms/step - loss: 1.3081e-05 - accuracy: 1.0000 - val_loss: 1.3967e-05 - val_accuracy: 1.0000\n"
      ]
     }
    ],
@@ -418,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,10 +428,95 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\sathi\\AppData\\Roaming\\Python\\Python311\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\sathi\\AppData\\Roaming\\Python\\Python311\\site-packages\\keras\\src\\optimizers\\__init__.py:309: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n",
+      "Epoch 1/2\n",
+      "WARNING:tensorflow:From C:\\Users\\sathi\\AppData\\Roaming\\Python\\Python311\\site-packages\\keras\\src\\utils\\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\sathi\\AppData\\Roaming\\Python\\Python311\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n",
+      "1/1 [==============================] - 4s 4s/step - loss: 0.6931 - accuracy: 1.0000 - val_loss: 0.6921 - val_accuracy: 1.0000\n",
+      "Epoch 2/2\n",
+      "1/1 [==============================] - 0s 63ms/step - loss: 0.6921 - accuracy: 1.0000 - val_loss: 0.6911 - val_accuracy: 1.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an instance of the model\n",
+    "# Hyperparameters\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import LSTM, Dense\n",
+    "\n",
+    "# Modify the call method of the LSTMClassifier\n",
+    "class LSTMClassifier(tf.keras.Model):\n",
+    "    def __init__(self, input_shape, hidden_units, output_units):\n",
+    "        super(LSTMClassifier, self).__init__()\n",
+    "        self.lstm = LSTM(hidden_units, return_sequences=False)  # Set return_sequences=False since we only need the output at the last timestep\n",
+    "        self.dense = Dense(output_units, activation='sigmoid')\n",
+    "\n",
+    "    def call(self, inputs):\n",
+    "        x = tf.expand_dims(inputs, axis=-1)  # Add a new dimension to represent the input features\n",
+    "        x = self.lstm(x)\n",
+    "        output = self.dense(x)\n",
+    "        return output\n",
+    "    \n",
+    "input_shape = adjacency_matrix_flat.shape[1:]  # Assuming each tuple has 2 attributes\n",
+    "hidden_units = 16\n",
+    "output_units = 1  # Binary classification\n",
+    "# Initialize model, optimizer, and loss function\n",
+    "lstmmodel = LSTMClassifier(input_shape, hidden_units, output_units)\n",
+    "\n",
+    "dummy_input = np.zeros((4, 4), dtype=float)\n",
+    "dummy_label = np.zeros((4, 4))\n",
+    "#Use dummy data to initialize the model\n",
+    "dummy_flat = dummy_input.reshape(-1, 1)\n",
+    "dummy_label_flat = dummy_label.reshape(-1, 1) \n",
+    "\n",
+    "lstmmodel.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "lstmhistory = lstmmodel.fit(dummy_flat, dummy_label_flat, epochs=2, batch_size=32, validation_split=0.2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Load the saved weights\n",
+    "lstmmodel.load_weights(\"lstmfinalldaweights.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  16740/1350547 [..............................] - ETA: 41:28"
+     ]
+    }
+   ],
    "source": [
     "lstmpredictions = lstmmodel.predict(adjacency_matrix_test_flat)\n",
     "lstmpredictions = (lstmpredictions > 0.5).astype(int)"
@@ -447,6 +534,84 @@
     "report = classification_report(label_test_flat, lstmpredictions)\n",
     "\n",
     "print(\"Classification Report for LSTM:\")\n",
+    "print(report)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GRU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import GRU, Dense\n",
+    "\n",
+    "# Modify the call method of the GRUClassifier\n",
+    "class GRUClassifier(tf.keras.Model):\n",
+    "    def __init__(self, input_shape, hidden_units, output_units):\n",
+    "        super(GRUClassifier, self).__init__()\n",
+    "        self.gru = GRU(hidden_units, return_sequences=False)  # Set return_sequences=False since we only need the output at the last timestep\n",
+    "        self.dense = Dense(output_units, activation='sigmoid')\n",
+    "\n",
+    "    def call(self, inputs):\n",
+    "        x = tf.expand_dims(inputs, axis=-1)  # Add a new dimension to represent the input features\n",
+    "        x = self.gru(x)\n",
+    "        output = self.dense(x)\n",
+    "        return output\n",
+    "\n",
+    "# Hyperparameters\n",
+    "input_shape = adjacency_matrix_flat.shape[1:]  # Assuming each tuple has 2 attributes\n",
+    "hidden_units = 16\n",
+    "output_units = 1  # Binary classification\n",
+    "\n",
+    "grumodel = GRUClassifier(input_shape, hidden_units, output_units)\n",
+    "\n",
+    "\n",
+    "grumodel.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "gruhistory = grumodel.fit(adjacency_tensor, label_flat, epochs=2, batch_size=32, validation_split=0.2)\n",
+    "\n",
+    "# Convert adjacency_matrix_flat to a TensorFlow tensor\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grumodel.save_weights(\"grufinalldaweights.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grupredictions = grumodel.predict(adjacency_matrix_test_flat)\n",
+    "grupredictions = (grupredictions > 0.5).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "# Generate classification report\n",
+    "report = classification_report(label_test_flat, grupredictions)\n",
+    "\n",
+    "print(\"Classification Report for GRU:\")\n",
     "print(report)"
    ]
   }
