--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -81,16 +81,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_16964\\2025491202.py:1: DtypeWarning: Columns (46) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_14840\\2025491202.py:1: DtypeWarning: Columns (46) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  train = pd.read_csv(r'D:\\Project Phase II\\Dataset\\finaltrain.csv',encoding='cp1252')\n",
-      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_16964\\2025491202.py:2: DtypeWarning: Columns (46) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_14840\\2025491202.py:2: DtypeWarning: Columns (46) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  test = pd.read_csv(r'D:\\Project Phase II\\Dataset\\finaltest.csv',encoding='cp1252')\n"
      ]
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,14 +243,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_16964\\3664507687.py:13: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_14840\\3664507687.py:13: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  adjacency_matrix[src_index, dst_index] = lda_x_train[i]\n"
      ]
     }
@@ -324,7 +324,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_16964\\4001184087.py:13: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_14840\\4001184087.py:13: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  adjacency_matrix_test[src_index, dst_index] = lda_x_test[i]\n"
      ]
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -452,9 +452,9 @@
       "\n",
       "WARNING:tensorflow:From C:\\Users\\sathi\\AppData\\Roaming\\Python\\Python311\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
       "\n",
-      "1/1 [==============================] - 4s 4s/step - loss: 0.6931 - accuracy: 1.0000 - val_loss: 0.6921 - val_accuracy: 1.0000\n",
+      "1/1 [==============================] - 5s 5s/step - loss: 0.6931 - accuracy: 1.0000 - val_loss: 0.6920 - val_accuracy: 1.0000\n",
       "Epoch 2/2\n",
-      "1/1 [==============================] - 0s 63ms/step - loss: 0.6921 - accuracy: 1.0000 - val_loss: 0.6911 - val_accuracy: 1.0000\n"
+      "1/1 [==============================] - 0s 69ms/step - loss: 0.6920 - accuracy: 1.0000 - val_loss: 0.6909 - val_accuracy: 1.0000\n"
      ]
     }
    ],
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,14 +506,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  16740/1350547 [..............................] - ETA: 41:28"
+      "1350547/1350547 [==============================] - 2952s 2ms/step\n"
      ]
     }
    ],
@@ -524,9 +524,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification Report for LSTM:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       1.00      1.00      1.00  43214979\n",
+      "         1.0       0.98      0.99      0.99      2497\n",
+      "\n",
+      "    accuracy                           1.00  43217476\n",
+      "   macro avg       0.99      1.00      0.99  43217476\n",
+      "weighted avg       1.00      1.00      1.00  43217476\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import classification_report\n",
     "\n",
@@ -535,6 +552,257 @@
     "\n",
     "print(\"Classification Report for LSTM:\")\n",
     "print(report)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test lstm with author's test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "autest = pd.read_csv(r'D:\\Project Phase II\\Dataset\\UNSW_NB15_testing-set.csv',encoding='cp1252')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "autestdrop = ['ï»¿id', 'rate', 'sloss', 'dloss','stcpb', 'dtcpb','trans_depth','ct_srv_src','ct_dst_ltm',\n",
+    "       'ct_src_dport_ltm', 'ct_dst_sport_ltm', 'ct_dst_src_ltm',\n",
+    "       'is_ftp_login', 'ct_ftp_cmd', 'ct_flw_http_mthd', 'ct_src_ltm',\n",
+    "       'ct_srv_dst', 'is_sm_ips_ports', 'attack_cat']\n",
+    "\n",
+    "\n",
+    "autest = autest.drop(autestdrop, axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Change column names of autest\n",
+    "autest.rename(columns={'dinpkt':'Dintpkt','djit':'Djit','dload':'Dload','dpkts':'Dpkts','label':'Label','sinpkt':'Sintpkt','sjit':'Sjit', 'sload':'Sload', 'spkts':'Spkts','dmean':'dmeansz','response_body_len':'res_bdy_len', 'smean':'smeansz'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "autest = autest[(autest['proto']=='tcp') | (autest['proto']=='udp') | (autest['proto']=='ospf')]\n",
+    "autest = autest[(autest['service']=='ssh') | (autest['service']=='ftp-data ')  | (autest['service']=='ftp') | (autest['service']=='-') | (autest['service']=='dns') | (autest['service']=='smtp') | (autest['service']=='http') | (autest['service']=='radius') | (autest['service']=='pop3') ]\n",
+    "autest = autest[(autest['state'] == 'CON') | (autest['state'] == 'RST') | (autest['state'] == 'FIN') | (autest['state'] == 'ACC') | (autest['state'] == 'REQ') | (autest['state'] == 'INT')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "autest['proto'].replace(\"tcp\", 0, inplace = True)\n",
+    "autest['proto'].replace(\"udp\", 1, inplace = True)\n",
+    "autest['proto'].replace(\"ospf\", 2, inplace = True)\n",
+    "\n",
+    "autest['service'].replace(\"ssh\", 0, inplace = True)\n",
+    "autest['service'].replace(\"ftp-data\", 1, inplace = True)\n",
+    "autest['service'].replace(\"ftp\", 2, inplace = True)\n",
+    "autest['service'].replace(\"-\", 3, inplace = True)\n",
+    "autest['service'].replace(\"dns\", 4, inplace = True)\n",
+    "autest['service'].replace(\"smtp\", 5, inplace = True)\n",
+    "autest['service'].replace(\"http\", 6, inplace = True)\n",
+    "autest['service'].replace(\"radius\", 7, inplace = True)\n",
+    "autest['service'].replace(\"pop3\", 8, inplace = True)\n",
+    "\n",
+    "autest['state'].replace(\"CON\", 0, inplace = True)\n",
+    "autest['state'].replace(\"RST\", 1, inplace = True)\n",
+    "autest['state'].replace(\"FIN\", 2, inplace = True)\n",
+    "autest['state'].replace(\"ACC\", 3, inplace = True)\n",
+    "autest['state'].replace(\"REQ\", 4, inplace = True)\n",
+    "autest['state'].replace(\"INT\", 5, inplace = True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for column in autest.columns:\n",
+    "    if column != 'Label':\n",
+    "        col_mean = sum(autest[column]) / len(autest[column])\n",
+    "        col_std = (sum((x - col_mean) ** 2 for x in autest[column]) / len(autest[column])) ** 0.5\n",
+    "        autest[column] = [(x - col_mean) / col_std for x in autest[column]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "autest = autest.drop_duplicates()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "autestAttributes = autest.drop(['Label'], axis = 1)\n",
+    "autestAttributes = autestAttributes[trainAttributes.columns]\n",
+    "autestLabel = autest['Label']\n",
+    "lda_x_autest = lda.transform(autestAttributes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_14840\\2740835615.py:12: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  adjacency_matrix_autest[i, j] = lda_x_autest[counter]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "# Prepare an adjacency matrix of the nodes\n",
+    "autestlen = int(len(autest) ** 0.5)\n",
+    "adjacency_matrix_autest = np.zeros((autestlen, autestlen), dtype=float)\n",
+    "label_matrix_autest = np.zeros((autestlen, autestlen))\n",
+    "counter = 0\n",
+    "\n",
+    "\n",
+    "# Add the columns srcip:sport and dstip:dsport to the adjacency matrix\n",
+    "for i in range(autestlen):\n",
+    "    for j in range(autestlen):\n",
+    "        adjacency_matrix_autest[i, j] = lda_x_autest[counter]\n",
+    "        label_matrix_autest[i, j] = autest['Label'].iloc[counter]\n",
+    "        counter += 1\n",
+    "# Flatten tuple values in the adjacency matrix\n",
+    "adjacency_matrix_autest_flat = adjacency_matrix_autest.reshape(-1, 1)\n",
+    "label_autest_flat = label_matrix_autest.reshape(-1, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1392/1392 [==============================] - 11s 7ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "lstmpredictions = lstmmodel.predict(adjacency_matrix_autest_flat)\n",
+    "lstmpredictions = (lstmpredictions >= 0.5).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Label\n",
+       "0    29673\n",
+       "1    14973\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "autest.Label.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value: 0, Count: 44178\n",
+      "Value: 1, Count: 343\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_values, counts = np.unique(lstmpredictions, return_counts=True)\n",
+    "\n",
+    "# Display the unique values and their counts\n",
+    "for value, count in zip(unique_values, counts):\n",
+    "    print(f\"Value: {value}, Count: {count}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification Report for LSTM using Author's test set:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.66      0.99      0.79     29548\n",
+      "         1.0       0.05      0.00      0.00     14973\n",
+      "\n",
+      "    accuracy                           0.66     44521\n",
+      "   macro avg       0.36      0.50      0.40     44521\n",
+      "weighted avg       0.46      0.66      0.53     44521\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "# Generate classification report\n",
+    "report = classification_report(label_autest_flat, lstmpredictions)\n",
+    "\n",
+    "print(\"Classification Report for LSTM using Author's test set:\")\n",
+    "print(report)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Performance is down bad"
    ]
   },
   {
