--- a/Phase2BaselineModelPerformanceReduction.ipynb
+++ b/Phase2BaselineModelPerformanceReduction.ipynb
@@ -4586,7 +4586,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Other stuff"
+    "## Match Author provided train-test dataset with our dataset"
    ]
   },
   {
